@@ -57,7 +57,11 @@ public class PyDefaultDict extends PyDictionary implements Traverseproc {
         backingMap = CacheBuilder.newBuilder().build(
                 new CacheLoader<PyObject, PyObject>() {
                     public PyObject load(PyObject key) {
-                        return __missing__(key);
+                        try {
+                            return __missing__(key);
+                        } catch (RuntimeException ex) {
+                            throw new MissingThrownException(ex);
+                        }
                     }
                 });
     }
@@ -170,6 +174,10 @@ public class PyDefaultDict extends PyDictionary implements Traverseproc {
              * caller as it is. */
             throw pe;
         } catch (Exception ex) {
+            Throwable cause = ex.getCause();
+            if (cause != null && cause instanceof MissingThrownException) {
+                throw ((MissingThrownException) cause).thrownByMissing;
+            }
             throw Py.KeyError(key);
         }
     }
@@ -223,5 +231,13 @@ public class PyDefaultDict extends PyDictionary implements Traverseproc {
             return false;
         }
         return backingMap.asMap().containsKey(ob) || backingMap.asMap().containsValue(ob);
+    }
+
+    private static class MissingThrownException extends RuntimeException {
+        final RuntimeException thrownByMissing;
+        MissingThrownException(RuntimeException thrownByMissing) {
+            super(thrownByMissing);
+            this.thrownByMissing = thrownByMissing;
+        }
     }
 }
